#53 testing with java 17